第一回授業

--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>「Webコンテンツ作成」の成果</title>
   </head>
   <body>
-    <p>This is my page</p>
+	<h1>「Webコンテンツ作成」の成果</h1>
+
+	<h2>本テーマについて</h2>
+	<p>Webページの基本的な記述方法とHTMLやWebページのレイアウトを指定するためのCSS、インタラクティブなページを作るためのJavaScript プログラミングについて学んでいき、HTML等を用いたWebページ作成ができるようになる。</p>
+
+	<h2>プロジェクト課題について</h2>
+  <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200文字以上)</p>
+  <p>プロジェクト課題で作成したページ:<a href="structure.html" target="_blank">project.html</a></p>
+
+	<h2>数当てゲーム</h2>
+  <p>(このテーマの第3回から数当てゲームを作りますので,そのあとにゲームの概要を説明してください.)(200文字以上)</p>
+  <p>数当てゲームのページ:<a href="structure.html" target="_blank">kazuate.html</a></p>
+
+  <h2>各授業回の学習事項</h2>
+  <h3>第1回WWWと HTML</h3>
+  <p>(今回学習した事柄を説明してください(100文字以上)</p>
+  <p>演習の成果:<a href="structure.html" target="_blank">演習1-4:HTMLのさまざまな要素</a></p>
+  <h3>第2回 CSSによるWebページの装飾</h3>
+  <h3>第3回 JavaScriptの基本</h3>
+  <h3>第4回DOMJavaScript</h3>
+  <h3>第5回 イベント処理</h3>
   </body>
 </html>
