--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 	<h2>プロジェクト課題について</h2>
   <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200文字以上)</p>
-  <p>プロジェクト課題で作成したページ:<a href="structure.html" target="_blank">project.html</a></p>
+  <p>プロジェクト課題で作成したページ:<a href="https://g386362023.github.io/medialabo/project.html" target="_blank">project.html</a></p>
 
 	<h2>数当てゲーム</h2>
   <p>(このテーマの第3回から数当てゲームを作りますので,そのあとにゲームの概要を説明してください.)(200文字以上)</p>
-  <p>数当てゲームのページ:<a href="structure.html" target="_blank">kazuate.html</a></p>
+  <p>数当てゲームのページ:<a href="https://g386362023.github.io/medialabo/" target="_blank">kazuate.html</a></p>
 
   <h2>各授業回の学習事項</h2>
   <h3>第1回WWWと HTML</h3>
-  <p>(今回学習した事柄を説明してください(100文字以上)</p>
-  <p>演習の成果:<a href="structure.html" target="_blank">演習1-4:HTMLのさまざまな要素</a></p>
+  <p>第一回の授業では、Webページの構成について、今後扱っていくことになるHTML、CSS、JavaScriptなどの大まかな説明を受けた。その中からHTMLの基礎的な要素などを学び、index.htmlの編集をした。</p>
+  <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-html/elements.html" target="_blank">演習1-4:HTMLのさまざまな要素</a></p>
   <h3>第2回 CSSによるWebページの装飾</h3>
   <h3>第3回 JavaScriptの基本</h3>
   <h3>第4回DOMJavaScript</h3>
