--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>「Webコンテンツ作成」の成果</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
 	<h1>「Webコンテンツ作成」の成果</h1>
@@ -23,6 +24,8 @@
   <p>第一回の授業では、Webページの構成について、今後扱っていくことになるHTML、CSS、JavaScriptなどの大まかな説明を受けた。その中からHTMLの基礎的な要素などを学び、index.htmlの編集をした。</p>
   <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-html/elements.html" target="_blank">演習1-4:HTMLのさまざまな要素</a></p>
   <h3>第2回 CSSによるWebページの装飾</h3>
+  <p>第二回の授業では、CSSによるHTMLの要素の見た目の変え方について学んだ。後半では実際にWebページの見た目を装飾し、index.htmlやプロジェクト課題で作成するproject.htmlの編集をした。</p>
+  <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-css/browser-intro.html" target="_blank">練習問題2-3</a></p>
   <h3>第3回 JavaScriptの基本</h3>
   <h3>第4回DOMJavaScript</h3>
   <h3>第5回 イベント処理</h3>
