--- a/project.html
+++ b/project.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>プロジェクト課題</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-	<h1>世界の天気（検索結果1件）</h1>
-	<ul>
-		<li>緯度: 116.3972</li>
-		<li>経度: 39.9075</li>
-		<li>天気: 曇りがち</li>
-		<li>最高気温: 9.94</li>
-		<li>最低気温: 9.94</li>
+    <div class="box30" style="width: 500px;height: 250px;padding-left:margin-left 5px;margin-left: 509px;">
+      <div class="box-title">世界の天気（検索結果1件）</div>
+      <ul>
+        <li>緯度: 116.3972</li>
+        <li>経度: 39.9075</li>
+        <li>天気: 曇りがち</li>
+        <li>最高気温: 9.94</li>
+        <li>最低気温: 9.94</li>
         <li>湿度: 14</li>
         <li>都市名: 北京市</li>
-	</ul>
+      </ul>
+  </div>
   </body>
 </html>
