第三回授業

--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>プロジェクト課題</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="weather.js" defer></script>
   </head>
   <body>
     <div class="box30" style="width: 500px;height: 250px;padding-left:margin-left 5px;margin-left: 509px;">
