--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<h2>数当てゲーム</h2>
   <p>(このテーマの第3回から数当てゲームを作りますので,そのあとにゲームの概要を説明してください.)(200文字以上)</p>
-  <p>数当てゲームのページ:<a href="https://g386362023.github.io/medialabo/" target="_blank">kazuate.html</a></p>
+  <p>数当てゲームのページ:<a href="https://g386362023.github.io/medialabo/kazuate.html" target="_blank">kazuate.html</a></p>
 
   <h2>各授業回の学習事項</h2>
   <h3>第1回WWWと HTML</h3>
@@ -27,6 +27,8 @@
   <p>第二回の授業では、CSSによるHTMLの要素の見た目の変え方について学んだ。後半では実際にWebページの見た目を装飾し、index.htmlやプロジェクト課題で作成するproject.htmlの編集をした。</p>
   <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-css/browser-intro.html" target="_blank">練習問題2-3</a></p>
   <h3>第3回 JavaScriptの基本</h3>
+  <p>第三回の授業では、JavaScriptの基礎や、FireFoxのウェブ開発ツールにあるコンソールの使い方などを学んだ。数当てゲームのページのテンプレートを作り、プロジェクト課題で使うJavaSciptプログラムのdataにあるデータ項目をコンソールに出力できるようにした。</p>
+  <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-js/obj-practice.html" target="_blank">練習問題3-6</a></p>
   <h3>第4回DOMJavaScript</h3>
   <h3>第5回 イベント処理</h3>
   </body>
