--- a/project.html
+++ b/project.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>プロジェクト課題</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="weather.css">
     <script src="weather.js" defer></script>
   </head>
   <body>
-    <div class="box30" style="width: 500px;height: 250px;padding-left:margin-left 5px;margin-left: 509px;">
+    <!-- <div class="box" style="width: 500px;height: 250px;margin: 0 auto;">
       <div class="box-title">世界の天気（検索結果1件）</div>
       <ul>
         <li>緯度: 116.3972</li>
@@ -18,6 +18,12 @@
         <li>湿度: 14</li>
         <li>都市名: 北京市</li>
       </ul>
-  </div>
+    </div> -->
+    <div id="result">
+      <div class="box" style="width: 500px;height: 250px;margin: 0 auto;">
+        <div class="box-title">世界の天気（検索結果1件）</div>
+        <ul id="list"></ul>
+      </div>
+    </div>
   </body>
 </html>
