--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<h2>数当てゲーム</h2>
   <p>(このテーマの第3回から数当てゲームを作りますので,そのあとにゲームの概要を説明してください.)(200文字以上)</p>
-  <p>数当てゲームをするプログラムをJavaScriptでかき、そこで行う処理で必要な変数やデータをHTML内でかいた要素ごとのIDと紐づけることで、JavaScript内の処理結果に対応したメッセージをページに表示できるようにしている。</p>
+  <p>数当てゲームをするプログラムをJavaScriptでかき、そこで行う処理で必要な変数やデータをHTML内でかいた要素ごとのIDと紐づけることで、JavaScript内の処理結果に対応したメッセージをページに表示できるようにしている。イベントとinput要素を使うことで、ユーザの入力に応じた処理ができるようにした。</p>
   <p>数当てゲームのページ:<a href="https://g386362023.github.io/medialabo/kazuate.html" target="_blank">kazuate.html</a></p>
 
   <h2>各授業回の学習事項</h2>
@@ -34,5 +34,7 @@
   <p>第四回の授業では、JavaScript内にあるデータをページに表示する方法などを学んだ。数当てゲームの結果や、プロジェクト課題のJavaSciptプログラムにあるデータ項目をHTMLの要素としてページに表示できるようにした。</p>
   <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-dom/dom-exercise.html" target="_blank">練習問題4-2から4-5</a></p>
   <h3>第5回 イベント処理</h3>
+  <p>第五回の授業では、Web ページ上で動作や出来事が起こった際にプログラムを動かすことができるイベントについて学んだ。イベントハンドラの登録や、イベントの種類、input要素の使い方などがわかるようになった。</p>
+  <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-event/event-list.html" target="_blank">練習問題5-3</a></p>
   </body>
 </html>
