--- a/kazuate.html
+++ b/kazuate.html
@@ -9,7 +9,9 @@
 
   <body>
     <h1>数当てゲーム</h1>
-    <p>将来ここにはテキストボックスとボタンを設置します</p>
+    <label for="kazu">1から10の間の整数: </label>
+    <input type="text" name="kazu" id="kazu" size="4">
+    <button id="print">回答</button>
     <p><span id="kaisu"></span>回目の予想: <span id="answer"></span></p>
     <p id="result"></p>
   </body>
