第六回授業

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <body>
 	<h1>「Webコンテンツ作成」の成果</h1>
 
-	<h2>本テーマについて</h2>
+	<h2>1.本テーマの学習目的</h2>
 	<p>Webページの基本的な記述方法とHTMLやWebページのレイアウトを指定するためのCSS、インタラクティブなページを作るためのJavaScript プログラミングについて学んでいき、HTML等を用いたWebページ作成ができるようになる。</p>
 
-	<h2>プロジェクト課題について</h2>
+	<h2>2.プロジェクト課題</h2>
   <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200文字以上)</p>
+  <p>WWWの世界の天気が入っているサーバを検索し、検索結果を表示するページ。HTML, CSS, JavaScript の学習内容を活かして検索して得たデータを見やすく表示できるようにした。</p>
   <p>プロジェクト課題で作成したページ:<a href="https://g386362023.github.io/medialabo/project.html" target="_blank">project.html</a></p>
 
-	<h2>数当てゲーム</h2>
-  <p>(このテーマの第3回から数当てゲームを作りますので,そのあとにゲームの概要を説明してください.)(200文字以上)</p>
-  <p>数当てゲームをするプログラムをJavaScriptでかき、そこで行う処理で必要な変数やデータをHTML内でかいた要素ごとのIDと紐づけることで、JavaScript内の処理結果に対応したメッセージをページに表示できるようにしている。イベントとinput要素を使うことで、ユーザの入力に応じた処理ができるようにした。</p>
+	<h2>3.数当てゲーム</h2>
+  <p>1から10のランダムに設定された数字を答えとし、ユーザに予想をたててその数字を当ててもらうプログラム。予想回数は3回までとし、ユーザの入力が外れた場合は，入力よりも答えが大きいか小さいか表示する。予想が当たればその時点でゲームは終了。ゲーム終了後は入力情報にかかわらず答えとすでにゲームが終わっていることを表示する。HTMLで用意した各要素をIDを用いてJavaScriptのデータと紐付け、イベントとinput要素を使うことで、ユーザの入力に応じた処理ができるようにした。JavaScript内で予想や答え、回数を記録する変数を使うことで回答回数と予想の正誤に応じたメッセージが表示されるようにしてある。</p>
   <p>数当てゲームのページ:<a href="https://g386362023.github.io/medialabo/kazuate.html" target="_blank">kazuate.html</a></p>
 
-  <h2>各授業回の学習事項</h2>
-  <h3>第1回WWWと HTML</h3>
+  <h2>4.各授業回の学習事項</h2>
+  <h3>第1回 WWWとHTML</h3>
   <p>第一回の授業では、Webページの構成について、今後扱っていくことになるHTML、CSS、JavaScriptなどの大まかな説明を受けた。その中からHTMLの基礎的な要素などを学び、index.htmlの編集をした。</p>
   <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-html/elements.html" target="_blank">演習1-4:HTMLのさまざまな要素</a></p>
   <h3>第2回 CSSによるWebページの装飾</h3>
@@ -36,5 +36,14 @@
   <h3>第5回 イベント処理</h3>
   <p>第五回の授業では、Web ページ上で動作や出来事が起こった際にプログラムを動かすことができるイベントについて学んだ。イベントハンドラの登録や、イベントの種類、input要素の使い方などがわかるようになった。</p>
   <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-event/event-list.html" target="_blank">練習問題5-3</a></p>
+
+  <h2>5.工夫点，苦心点，強調点，感想</h2>
+  <p>1000文字以上</p>
+
+  <h2>6.参考文献</h2>
+  <ul>
+    <li>リンク</li>
+  </ul>
+
   </body>
 </html>
