第六回演習

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 	<p>Webページの基本的な記述方法とHTMLやWebページのレイアウトを指定するためのCSS、インタラクティブなページを作るためのJavaScript プログラミングについて学んでいき、HTML等を用いたWebページ作成ができるようになる。</p>
 
 	<h2>2.プロジェクト課題</h2>
-  <p>(ここには皆さんが取り組んだプロジェクト課題について書きましょう.)(200文字以上)</p>
-  <p>WWWの世界の天気が入っているサーバを検索し、検索結果を表示するページ。HTML, CSS, JavaScript の学習内容を活かして検索して得たデータを見やすく表示できるようにした。</p>
+  <p>WWWの世界の天気が入っているサーバを検索し、検索結果を表示するページ。HTML, CSS, JavaScript の学習内容を活かして検索して得たデータを見やすく表示できるようにした。検索はプルダウンでできるようにし、そこから各都市を選んで検索ボタンを押すことで、その都市の情報を得るための通信処理に移行する。通信して得たデータを項目ごとにリストとして表示している。ページとプログラムの見やすさを重視し、できるだけシンプルなデザインにした。</p>
   <p>プロジェクト課題で作成したページ:<a href="https://g386362023.github.io/medialabo/project.html" target="_blank">project.html</a></p>
 
 	<h2>3.数当てゲーム</h2>
-  <p>1から10のランダムに設定された数字を答えとし、ユーザに予想をたててその数字を当ててもらうプログラム。予想回数は3回までとし、ユーザの入力が外れた場合は，入力よりも答えが大きいか小さいか表示する。予想が当たればその時点でゲームは終了。ゲーム終了後は入力情報にかかわらず答えとすでにゲームが終わっていることを表示する。HTMLで用意した各要素をIDを用いてJavaScriptのデータと紐付け、イベントとinput要素を使うことで、ユーザの入力に応じた処理ができるようにした。JavaScript内で予想や答え、回数を記録する変数を使うことで回答回数と予想の正誤に応じたメッセージが表示されるようにしてある。</p>
+  <p>1から10のランダムに設定された数字を答えとし、ユーザに予想をたててその数字を当ててもらうプログラム。予想回数は3回までとし、ユーザの入力が外れた場合は、入力よりも答えが大きいか小さいか表示する。予想が当たればその時点でゲームは終了。ゲーム終了後は入力情報にかかわらず答えとすでにゲームが終わっていることを表示する。HTMLで用意した各要素をIDを用いてJavaScriptのデータと紐付け、イベントとinput要素を使うことで、ユーザの入力に応じた処理ができるようにした。JavaScript内で予想や答え、回数を記録する変数を使うことで回答回数と予想の正誤に応じたメッセージが表示されるようにしてある。</p>
   <p>数当てゲームのページ:<a href="https://g386362023.github.io/medialabo/kazuate.html" target="_blank">kazuate.html</a></p>
 
   <h2>4.各授業回の学習事項</h2>
@@ -38,12 +37,16 @@
   <p>演習の成果:<a href="https://g386362023.github.io/medialabo/practice-event/event-list.html" target="_blank">練習問題5-3</a></p>
 
   <h2>5.工夫点，苦心点，強調点，感想</h2>
-  <p>1000文字以上</p>
+  <p>今回、メディア実験の授業を通してHTML、CSS、JavaScript の基礎を学習し、実際にウェブページを作成してみて、難しく感じることは沢山ありましたが、新しいことを学べて楽しかったです。
+
+    まず、HTML の構造を正確に理解し、適切なタグを使用することが難しかったです。例えば、header要素やid属性の使い分け、また見出しタグの階層構造を適切にすることがはじめは難しかったです。特に、第三回の授業でJavaScriptを学んですぐの間は、授業資料に書いてある文章と見比べながらどこがどう対応しているのか理解するのに苦労しました。
+    次に、CSS のスタイリングにおいては、レイアウトの調整が一番の難関でした。コンテナ内のアイテムの配置を思い通りにするためのプロパティの設定に苦労しました。プロジェクト課題では、div要素やclass属性をうまく使うことで、自分の思い描いたレイアウトを再現することができ嬉しかったです。
+    JavaScript に関しては、動的な要素の実装が初めての体験であったため、DOM 操作やイベントハンドリングに戸惑いました。また、JavaScript のデバッグや、エラーが発生した際のトラブルシューティングにも難しさを感じました。コンソールを活用しながらエラーの原因を特定し、解決策を見つけるプロセスには試行錯誤が必要でした。
+    
+    全六回の授業を通じて、ウェブ開発の基本的な概念や技術を理解することができましたが、まだまだ学ぶべきことが多いと感じました。それでも、自分の手でウェブページを作り上げた達成感は大きく、今後の授業に向けてのモチベーションとなりました。</p>
 
   <h2>6.参考文献</h2>
-  <ul>
-    <li>リンク</li>
-  </ul>
+  <p>講義資料:<a href="https://www.nishita-lab.org/web-contents/text/1html/1_0prelim_check.html" target="_blank">情報メディア実験「Web コンテンツ作成」</a></p>
 
   </body>
 </html>
