最終レポート

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <h2>5.工夫点，苦心点，強調点，感想</h2>
   <p>今回、メディア実験の授業を通してHTML、CSS、JavaScript の基礎を学習し、実際にウェブページを作成してみて、難しく感じることは沢山ありましたが、新しいことを学べて楽しかったです。また、Webコンテンツの作成方法を学んだことで、ウェブ開発の基礎をしっかりと理解することができました。特に、各技術がどのように連携して動的で魅力的なウェブページを構築するかを学ぶ過程は非常に興味深かったです。</p>
   <p>
-    まず、HTML の構造を正確に理解し、適切なタグを使用することが難しかったです。例えば、header要素やid属性の使い分け、また見出しタグの階層構造を適切にすることがはじめは難しかったです。特に、第三回の授業でJavaScriptを学んですぐの間は、授業資料に書いてある文章と見比べながらどこがどう対応しているのか理解するのに苦労しました。
+    苦労した点としてはまず、HTML の構造を正確に理解し、適切なタグを使用することが難しかったです。例えば、header要素やid属性の使い分け、また見出しタグの階層構造を適切にすることがはじめは難しかったです。特に、第三回の授業でJavaScriptを学んですぐの間は、授業資料に書いてある文章と見比べながらどこがどう対応しているのか理解するのに苦労しました。
     次に、CSS のスタイリングにおいては、レイアウトの調整が一番の難関でした。コンテナ内のアイテムの配置を思い通りにするためのプロパティの設定に苦労しました。プロジェクト課題では、div要素やclass属性をうまく使うことで、自分の思い描いたレイアウトを再現することができ嬉しかったです。
     JavaScript に関しては、動的な要素の実装が初めての体験であったため、DOM 操作やイベントハンドリングに戸惑いました。また、JavaScript のデバッグや、エラーが発生した際のトラブルシューティングにも難しさを感じました。コンソールを活用しながらエラーの原因を特定し、解決策を見つけるプロセスには試行錯誤が必要でした。
     HTMLを用いてページの構造を作成し、CSSでデザインを整え、JavaScriptでインタラクティブな要素を追加するという流れは、理論と実践の両面から理解を深める助けになりました。授業中の演習やプロジェクトを通じて、実際に手を動かしながら学ぶことができたのも良かった点です。
     最初は新しい概念や技術に圧倒されることもありましたが、少しずつ理解が進むにつれて、楽しさと達成感が増してきました。この授業を通じて得た知識は、今後の学習や実践に大いに役立つと感じています。
   </p>
-  <p>全六回の授業を通じて、ウェブ開発の基本的な概念や技術を理解することができましたが、まだまだ学ぶべきことが多いと感じました。それでも、自分の手でウェブページを作り上げた達成感は大きく、今後の授業に向けてのモチベーションとなりました。</p>
+  <p>最後に、全六回の授業を通じて、ウェブ開発の基本的な概念や技術を理解することができましたが、まだまだ学ぶべきことが多いと感じました。それでも、自分の手でウェブページを作り上げた達成感は大きく、今後の授業に向けてのモチベーションとなりました。</p>
 
   <h2>6.参考文献</h2>
   <p>講義資料:<a href="https://www.nishita-lab.org/web-contents/text/1html/1_0prelim_check.html" target="_blank">情報メディア実験「Web コンテンツ作成」</a></p>
